--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,24 +11,23 @@
     "**/__pycache__": true,
     ".idea": true
   },
-  
+
   // TypeScript
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  
+
   // Python
   "python.analysis.extraPaths": ["${workspaceFolder}/smart_contracts"],
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
   "[python]": {
     "editor.codeActionsOnSave": {
-      "source.fixAll": true,
-      // Prevent default import sorting from running; Ruff will sort imports for us anyway
-      "source.organizeImports": false
+      "source.fixAll": "explicit",
+      "source.organizeImports": "never"
     },
     "editor.defaultFormatter": null
   },
   "python.formatting.provider": "black",
-  
+
   // On Windows, if execution policy is set to Signed (default) then it won't be able to activate the venv
   //  so instead let's set it to RemoteSigned for VS Code terminal
-  "terminal.integrated.shellArgs.windows": ["-ExecutionPolicy", "RemoteSigned"],
+  "terminal.integrated.shellArgs.windows": ["-ExecutionPolicy", "RemoteSigned"]
 }
